Cambiado a nuevo pattern matching en el switch